# c-list

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.sh  check_code_format.sh  check_equivalence_tests.sh  check_headers.sh  check_include_guards.sh  ci.yml  do_code_format.sh
examples/: list_sort.c
include/: list.h
src/: list.c
